2008-04-26  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.

        Bug 18628: SQUIRRELFISH: need to support recursion limit
        <https://bugs.webkit.org/show_bug.cgi?id=18628>

        Test to ensure we don't crash when re-entering global code
        with a full register file, and that we don't allow unbounded
        recursion by re-entering on a new register file..

        * fast/js/global-recursion-on-full-stack-expected.txt: Added.
        * fast/js/global-recursion-on-full-stack.html: Added.

2008-04-17  Antti Koivisto  <antti@apple.com>

        Update SVG animation test results.

        * platform/mac/svg/W3C-SVG-1.1/animate-elem-30-t-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/animate-elem-40-t-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/animate-elem-41-t-expected.txt:

2008-04-17  Antti Koivisto  <antti@apple.com>

        Re-enable animation tests on windows.

        * platform/win/Skipped:

2008-04-17  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Update test result for additon of XMLHttpRequest constants.

        * fast/dom/Window/window-properties-expected.txt:

2008-04-17  Anders Carlsson  <andersca@apple.com>

        Add applicationCache object.
        
        * fast/dom/Window/window-properties-expected.txt:

2008-04-17  Adam Roben  <aroben@apple.com>

        Add some crashing tests to the Skipped file

        * platform/win/Skipped:

2008-04-17  Dean Jackson  <dino@apple.com>

        Reviewed by Hyatt.

        Test for <rdar://problem/5849968> translate method should have Y=0 when only X is present

        * fast/css/transform-default-parameter.html: Added.
        * platform/mac/fast/css/transform-default-parameter-expected.checksum: Added.
        * platform/mac/fast/css/transform-default-parameter-expected.png: Added.
        * platform/mac/fast/css/transform-default-parameter-expected.txt: Added.

2008-04-16  Darin Adler  <darin@apple.com>
