@@ -1,3 +1,12 @@
+2008-05-01  Maciej Stachowiak  <mjs@apple.com>
+
+        Reviewed by Oliver.
+        
+        - bump up the numbers in this test to account for our now much
+        higher recursion capability.
+
+        * fast/js/deep-recursion-test.html:
+
 2008-04-26  Oliver Hunt  <oliver@apple.com>
 
         Reviewed by Maciej.
